fix(menu): add extra margin

--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -39,7 +39,7 @@ Main sidebar
     a {
       height: 45px;
       padding: 0 20px;
-      // margin-bottom: 10px;
+      margin-bottom: 10px;
       align-items: center;
       display: flex;
       font-size: 15px;
