--- a/src/newapp/layout/app-menu/app-menu.component.scss
+++ b/src/newapp/layout/app-menu/app-menu.component.scss
@@ -72,7 +72,7 @@
 .mat-tree-node {
   min-height: 45px;
   font-size: 15px;
-
+  margin-bottom: 10px;
   &.active {
     color: white;
     background-color: rgba(255, 255, 255, 0.1);
